Update swag docs
